--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "mongoose": "^6.0.14"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
